--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^22.15.34",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^2.0.1",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
